--- a/template/base.html
+++ b/template/base.html
@@ -880,7 +880,7 @@
                      onerror="this.src='https://cdn-icons-png.flaticon.com/512/1998/1998673.png'">
                 کلیه حقوق این پنل متعلق به سیستم مدیریت HSE می‌باشد © ۲۰۲۳
             </p>
-            <small>طراحی توسط شرکت https://rank0.ir <i class="fas fa-heart text-danger mx-1"></i></small>
+            <small>طراحی توسط شرکت <a rel='nofollow' href="https://rank0.ir"></a> <i class="fas fa-heart text-danger mx-1"></i></small>
         </div>
     </div>
 
